--- a/src/components/SIdeBar/SideBar.module.scss
+++ b/src/components/SIdeBar/SideBar.module.scss
@@ -7,8 +7,9 @@
   align-items: center;
   background: #3a5cbd;
   color: #fff;
-  width: 12.5%;
+  width: 12.6%;
   min-width: 168px;
+  overflow-y: auto;
 }
 
 .logo {
