--- a/src/components/UserInfoPanel/UserInfoPanel.module.scss
+++ b/src/components/UserInfoPanel/UserInfoPanel.module.scss
@@ -4,6 +4,8 @@
   gap: 56px;
   padding: 40px 24px;
   max-width: 232px;
+  width: 14.35%;
+  flex-shrink: 0;
   max-height: 100%;
   overflow-y: auto;
   background: #ffffff;
@@ -55,6 +57,7 @@
   justify-content: center;
   align-items: center;
   gap: 26px;
+  text-align: center;
 }
 
 .eduInfoItem {
