--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -10,3 +10,23 @@
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12);
   border-radius: 2px;
 }
+
+.chatHeader {
+  display: flex;
+  justify-content: space-between;
+}
+
+.headerRight {
+  display: flex;
+  gap: 16px;
+}
+
+.avatarsWrapper {
+  display: flex;
+  box-shadow: 0px 0px 3.70673px rgba(0, 0, 0, 0.12);
+  border-radius: 2px;
+
+  & img:not(:first-child) {
+    // width: 100px;
+  }
+}
