--- a/src/components/Chat/MessageForm/MessageForm.module.scss
+++ b/src/components/Chat/MessageForm/MessageForm.module.scss
@@ -1,20 +1,29 @@
 .massageForm {
   width: 100%;
   height: 50px;
-
+  padding: 8px 16px;
+  display: flex;
+  align-items: center;
   background: rgba(236, 236, 236, 0.3);
   border: 1px solid rgba(215, 215, 215, 0.5);
   border-radius: 4px;
 }
 
 .messageInput {
-    width: 100%;
-    border: none;
-    background: transparent;
+  flex: 1;
+  border: none;
+  background: transparent;
+  padding: 8px 0;
+  resize: none;
 
-    &:focus {
-        outline: none;
-    }
+  font-size: 13px;
+  line-height: 16px;
+  color: #000;
+
+  &:focus {
+    outline: none;
+  }
+
 }
 
 .sendButton {
