--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,7 +1,7 @@
 .mainWrapper {
     display: flex;
     padding: 2px;
-    background-color: rgba(131, 131, 131, 0.2);
+    background-color: #F4F6FC;
     height: 100%;
     gap: 16px;
 }
