--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -3,10 +3,11 @@
   background: #fff;
   flex: 1;
   flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
 }
 
-.subwrapper {
-  padding: 0 24px;
+.subWrapper {
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12);
   border-radius: 2px;
 }
@@ -14,19 +15,112 @@
 .chatHeader {
   display: flex;
   justify-content: space-between;
+  padding: 0 24px;
+}
+
+.headerLeft {
+  display: flex;
+  gap: 16px;
+  padding: 16px 0;
+  
+  &.more {
+    width: 100%;
+  }
+}
+
+.avatarsWrapper {
+  position: relative;
+  display: flex;
+  // box-shadow: 0px 0px 3.70673px rgba(0, 0, 0, 0.12);
+  border-radius: 2px;
+  width: 54px;
+  align-items: center;
+
+  & :first-child {
+    transform: translateX(50%);
+    z-index: 2;
+    position: relative;
+  }
+
+  &.more{
+    width: 100%;
+
+    // & :nth-child(1){
+    //   left: calc(28px * 1)
+    // }
+  }
+}
+
+.avatarImage {
+  position: absolute;
+  width: 28px;
+  height: 28px;
+
+  border-radius: 50%;
+  border: 2px solid #fff;
+  left: 0;
+}
+
+.showMoreAvatars {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  font-size: 18px;
+  color: #718da7;
+}
+
+.infoWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.participantsInfo {
+  font-size: 14px;
+  // line-height: 17px;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #718da7;
+}
+
+.onlineInfo {
+  font-size: 12px;
+  // line-height: 133.5%;
+  line-height: 1;
+  color: #74bb77;
 }
 
 .headerRight {
   display: flex;
-  gap: 16px;
+  align-items: center;
+  gap: 8px;
 }
 
-.avatarsWrapper {
-  display: flex;
-  box-shadow: 0px 0px 3.70673px rgba(0, 0, 0, 0.12);
-  border-radius: 2px;
+.gridIconHeader {
+  width: 14px;
+  height: 14px;
+  fill: #718DA7;
+}
 
-  & img:not(:first-child) {
-    // width: 100px;
-  }
+.chatname {
+  font-size: 14px;
+  line-height: 17px;
+  text-transform: uppercase;
+  color: #718DA7;
+}
+
+.divider {
+  margin: 0 24px;
+  height: 1px;
+  background-color: #CFCFCF;
+}
+
+.formWrapper {
+  padding: 22px 24px;
+}
+
+.chatFeedWrapper {
+  padding: 24px;
+  flex-grow: 1;
 }
