--- a/src/components/Chat/MessageForm/MessageForm.module.scss
+++ b/src/components/Chat/MessageForm/MessageForm.module.scss
@@ -16,6 +16,7 @@
   padding: 8px 0;
   resize: none;
 
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 13px;
   line-height: 16px;
   color: #000;
