--- a/src/components/UserInfoPanel/UserInfoPanel.module.scss
+++ b/src/components/UserInfoPanel/UserInfoPanel.module.scss
@@ -4,7 +4,7 @@
   gap: 56px;
   padding: 40px 24px;
   max-width: 232px;
-  width: 14.35%;
+  width: 18.5%;
   flex-shrink: 0;
   max-height: 100%;
   overflow-y: auto;
@@ -49,6 +49,7 @@
   font-size: 12px;
   line-height: 15px;
   color: rgba(0, 0, 0, 0.5);
+  text-align: center;
 }
 
 .eduInfoList {
