--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -31,7 +31,6 @@
 .avatarsWrapper {
   position: relative;
   display: flex;
-  // box-shadow: 0px 0px 3.70673px rgba(0, 0, 0, 0.12);
   border-radius: 2px;
   width: 54px;
   align-items: center;
@@ -43,11 +42,7 @@
   }
 
   &.more{
-    width: 100%;
-
-    // & :nth-child(1){
-    //   left: calc(28px * 1)
-    // }
+    width: 100%; 
   }
 }
 
@@ -59,9 +54,19 @@
   border-radius: 50%;
   border: 2px solid #fff;
   left: 0;
+  transition: transform 500ms ease;
 }
 
-.showMoreAvatars {
+.showMoreAvatarsButton {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  font-size: 18px;
+  color: #718da7;
+}
+
+.showLessAvatarsButton {
   position: absolute;
   top: 50%;
   right: 0;
@@ -78,7 +83,6 @@
 
 .participantsInfo {
   font-size: 14px;
-  // line-height: 17px;
   line-height: 1;
   text-transform: uppercase;
   color: #718da7;
@@ -86,7 +90,6 @@
 
 .onlineInfo {
   font-size: 12px;
-  // line-height: 133.5%;
   line-height: 1;
   color: #74bb77;
 }
@@ -124,3 +127,4 @@
   padding: 24px;
   flex-grow: 1;
 }
+
