--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -126,5 +126,8 @@
 .chatFeedWrapper {
   padding: 24px;
   flex-grow: 1;
+  max-height: calc(100% - 155px);
+  min-height: calc(100% - 275px);
+  overflow-y: auto;
 }
 
