--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -129,5 +129,21 @@
   max-height: calc(100% - 155px);
   min-height: calc(100% - 275px);
   overflow-y: auto;
+
+    
+}
+::-webkit-scrollbar {
+  width: 14px;
 }
 
+::-webkit-scrollbar-thumb {
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 9999px;
+  background-color: #AAAAAA;
+  min-height: 400px;
+}
+
+::-webkit-scrollbar-track-piece {
+  margin: 10px;
+}
