--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -55,6 +55,7 @@
   border: 2px solid #fff;
   left: 0;
   transition: transform 500ms ease;
+  object-fit: cover;
 }
 
 .showMoreAvatarsButton {
@@ -129,6 +130,4 @@
   max-height: calc(100% - 155px);
   min-height: calc(100% - 275px);
   overflow-y: auto;
-
-    
 }
