--- a/src/components/UserInfoPanel/UploadAvatar/UploadAvatar.module.scss
+++ b/src/components/UserInfoPanel/UploadAvatar/UploadAvatar.module.scss
@@ -2,14 +2,18 @@
     position: absolute;
     width: 96px;
     height: 96px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     opacity: 0;
     transition: opacity 250ms ease-out;
+    background: rgba(#000, 0.5);
+    color: #FFF;
+    border-radius: 50%;
+    cursor: pointer;
 
     &:hover {
         opacity: 1;
-    }
-
-    & input {
-        // display: none;
     }
 }
