--- a/src/components/Chat/MessageFromChat/MessageFromChat.module.scss
+++ b/src/components/Chat/MessageFromChat/MessageFromChat.module.scss
@@ -5,37 +5,27 @@
 }
 
 .feedback {
-    position: relative;
-    padding-left: 48px;
-    margin-top: -24px;
+  position: relative;
+  padding-left: 48px;
+  margin-top: -24px;
 
-    &::before {
-        content: '';
-        position: absolute;
-        bottom: calc(100% - 20px);
-        right: calc(100% - 48px);
-        width: 28px;
-        height: 100%;
-        border-left: 1px solid #D9D9D9;
-        border-bottom: 1px solid #D9D9D9;
-        z-index: 1;
-    }
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: calc(100% - 20px);
+    right: calc(100% - 48px);
+    width: 28px;
+    height: 100%;
+    border-left: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
+    z-index: 1;
+  }
 }
 
 .avatarWrapper {
   position: relative;
   height: fit-content;
   z-index: 2;
-  & span {
-    position: absolute;
-    bottom: -3px;
-    right: 1px;
-    box-sizing: content-box;
-    width: 10px;
-    height: 10px;
-    border: 3px solid #fff;
-    border-radius: 50%;
-  }
 }
 
 .avatar {
@@ -47,6 +37,17 @@
   object-fit: cover;
 }
 
+.status {
+  position: absolute;
+  bottom: -3px;
+  right: 1px;
+  box-sizing: content-box;
+  width: 10px;
+  height: 10px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+}
+
 .online {
   background-color: #00c808;
 }
@@ -56,8 +57,9 @@
 }
 
 .contentSubWrapper {
-  flex-grow: 1;
+  // flex-grow: 1;
   padding-bottom: 12px;
+  min-width: 160px;
 }
 
 .userName {
@@ -70,13 +72,21 @@
 .contentWrapper {
   position: relative;
   padding: 10px 27px 10px 16px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .content {
   font-size: 13px;
   line-height: 20px;
   color: #0c2e4c;
+
+  & ul, li {
+    list-style: inside;
+  }
+
+  & u {
+    text-decoration: underline;
+  }
 }
 
 .feedbackButton {
