--- a/src/components/Chat/MessageForm/AttachFiles/AttachFiles.module.scss
+++ b/src/components/Chat/MessageForm/AttachFiles/AttachFiles.module.scss
@@ -1,11 +1,11 @@
 .mainWrapper {
   display: inline-flex;
   position: absolute;
-  bottom: 8px;
-  left: 156px;
-  gap: 9px;
+  bottom: 8rem;
+  left: 156rem;
+  gap: 9rem;
   justify-content: center;  
-  height: 32px;
+  height: 32rem;
   align-items: center;
 }
 
