--- a/src/components/Header/PrevLink/PrevLink.module.scss
+++ b/src/components/Header/PrevLink/PrevLink.module.scss
@@ -2,10 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 8px;
+  gap: 8rem;
   font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
+  font-size: 18rem;
+  line-height: 22rem;
   color: #0c2e4c;
   text-decoration: none;
 
