--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -13,7 +13,7 @@
   position: relative;
   width: 100%;
   height: auto;
-  padding: 30px;
+  padding: 30rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -23,19 +23,19 @@
 
 .logo {
   font-weight: 600;
-  font-size: 45.913px;
-  line-height: 56px;
+  font-size: 45.913rem;
+  line-height: 56rem;
   text-transform: uppercase;
   color: #001c54;
-  margin-bottom: 30px;
+  margin-bottom: 30rem;
 }
 
 .form {
-  width: 250px;
-  padding: 24px 0 10px;
+  width: 250rem;
+  padding: 24rem 0 10rem;
   display: flex;
   flex-direction: column;
-  border-top: 2px solid #001c54;
+  border-top: 2rem solid #001c54;
   justify-content: center;
   align-items: center;
 }
@@ -43,31 +43,31 @@
 .label {
   display: flex;
   flex-direction: column;
-  gap: 4px;
-  margin-bottom: 14px;
+  gap: 4rem;
+  margin-bottom: 14rem;
   width: 100%;
   & + label {
-    margin-bottom: 25px;
+    margin-bottom: 25rem;
   }
   & span {
     font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    padding-left: 14px;
+    font-size: 14rem;
+    line-height: 16rem;
+    padding-left: 14rem;
   }
 }
 
 .input {
   width: 100%;
-  height: 32px;
-  padding-left: 14px;
+  height: 32rem;
+  padding-left: 14rem;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 14rem;
+  line-height: 16rem;
   color: #001c54;
   background: #fcfcfc;
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12);
-  border-radius: 6px;
+  box-shadow: 0rem 0rem 4rem rgba(0, 0, 0, 0.12);
+  border-radius: 6rem;
   border: none;
   outline: none;
   &::placeholder {
@@ -75,24 +75,24 @@
   }
   &:hover,
   &:focus {
-    border: 1px solid #001c54;
+    border: 1rem solid #001c54;
   }
 }
 
 .button {
-  width: 120px;
-  height: 32px;
+  width: 120rem;
+  height: 32rem;
   font-weight: 700;
-  font-size: 14px;
-  line-height: 28px;
+  font-size: 14rem;
+  line-height: 28rem;
   text-align: center;   
   color: #fff;
   background-color: #001C54;
-  border-radius: 6px;
+  border-radius: 6rem;
   border: none;
   cursor: pointer;
   &:hover, &:focus {
-    border: 1px solid #fff;
+    border: 1rem solid #fff;
   }
   &:disabled {
     background-color: #727272;
