--- a/src/components/Chat/MessageForm/AttachFiles/Popconfirm.css
+++ b/src/components/Chat/MessageForm/AttachFiles/Popconfirm.css
@@ -1,7 +1,7 @@
 .popconfirmOverlay .ant-popover-inner {
   padding: 0;
-  box-shadow: 0px 0px 3.7067272663116455px 0px rgba(0, 0, 0, 0.12);
-  transform: translateX(-7px);
+  box-shadow: 0rem 0rem 3.7067272663116455rem 0rem rgba(0, 0, 0, 0.12);
+  transform: translateX(-7rem);
 }
 
 .popconfirmOverlay .ant-popover-arrow {
