--- a/src/components/Chat/MessageForm/MessageForm.module.scss
+++ b/src/components/Chat/MessageForm/MessageForm.module.scss
@@ -4,13 +4,13 @@
 
 .toolbarRight {
   position: absolute;
-  bottom: 8px;
-  right: 16px;
+  bottom: 8rem;
+  right: 16rem;
 }
 
 .sendButton {
-  width: 33px;
-  height: 33px;
+  width: 33rem;
+  height: 33rem;
   background: #3a5cbd;
-  border-radius: 4px;
+  border-radius: 4rem;
 }
