--- a/src/components/Chat/MessageFromChat/MessageFromChat.module.scss
+++ b/src/components/Chat/MessageFromChat/MessageFromChat.module.scss
@@ -1,23 +1,23 @@
 .messageWrapper {
   width: 100%;
   display: flex;
-  gap: 10px;
+  gap: 10rem;
 }
 
 .feedback {
   position: relative;
-  padding-left: 48px;
-  margin-top: -24px;
+  padding-left: 48rem;
+  margin-top: -24rem;
 
   &::before {
     content: "";
     position: absolute;
-    bottom: calc(100% - 20px);
-    right: calc(100% - 48px);
-    width: 28px;
+    bottom: calc(100% - 20rem);
+    right: calc(100% - 48rem);
+    width: 28rem;
     height: 100%;
-    border-left: 1px solid #d9d9d9;
-    border-bottom: 1px solid #d9d9d9;
+    border-left: 1rem solid #d9d9d9;
+    border-bottom: 1rem solid #d9d9d9;
     z-index: 1;
   }
 }
@@ -30,8 +30,8 @@
 
 .avatar {
   display: block;
-  width: 40px;
-  height: 40px;
+  width: 40rem;
+  height: 40rem;
   border-radius: 50%;
   background-color: #0c2e4c;
   object-fit: cover;
@@ -39,12 +39,12 @@
 
 .status {
   position: absolute;
-  bottom: -3px;
-  right: 1px;
+  bottom: -3rem;
+  right: 1rem;
   box-sizing: content-box;
-  width: 10px;
-  height: 10px;
-  border: 3px solid #fff;
+  width: 10rem;
+  height: 10rem;
+  border: 3rem solid #fff;
   border-radius: 50%;
 }
 
@@ -58,26 +58,26 @@
 
 .contentSubWrapper {
   // flex-grow: 1;
-  padding-bottom: 12px;
-  min-width: 160px;
+  padding-bottom: 12rem;
+  min-width: 160rem;
 }
 
 .userName {
-  font-size: 12px;
-  line-height: 15px;
+  font-size: 12rem;
+  line-height: 15rem;
   color: #718da7;
-  margin-bottom: 4px;
+  margin-bottom: 4rem;
 }
 
 .contentWrapper {
   position: relative;
-  padding: 10px 27px 10px 16px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  padding: 10rem 27rem 10rem 16rem;
+  box-shadow: 0rem 0rem 10rem rgba(0, 0, 0, 0.2);
 }
 
 .content {
-  font-size: 13px;
-  line-height: 20px;
+  font-size: 13rem;
+  line-height: 20rem;
   color: #0c2e4c;
 
   & ul, li {
@@ -91,21 +91,21 @@
 
 .feedbackButton {
   position: absolute;
-  bottom: -12px;
-  right: 16px;
-  width: 115px;
-  height: 24px;
+  bottom: -12rem;
+  right: 16rem;
+  width: 115rem;
+  height: 24rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 8px;
+  gap: 8rem;
   background: #fff;
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12);
-  border-radius: 2px;
+  box-shadow: 0rem 0rem 4rem rgba(0, 0, 0, 0.12);
+  border-radius: 2rem;
 }
 
 .feedbackButtonTitle {
-  font-size: 13px;
-  line-height: 16px;
+  font-size: 13rem;
+  line-height: 16rem;
   color: #718da7;
 }
