--- a/src/components/Chat/Quill/Quill.scss
+++ b/src/components/Chat/Quill/Quill.scss
@@ -1,10 +1,10 @@
 .wrapper {
   display: flex;
   flex-direction: column-reverse;
-  height: 170px;
+  height: 170rem;
   background: rgba(236, 236, 236, 0.3);
-  border: 1px solid rgba(215, 215, 215, 0.5);
-  border-radius: 4px;
+  border: 1rem solid rgba(215, 215, 215, 0.5);
+  border-radius: 4rem;
 
   & .ql-toolbar.ql-snow,
   .ql-container.ql-snow {
@@ -12,24 +12,24 @@
   }
 
   & .ql-toolbar.ql-snow {
-    padding: 16px;
+    padding: 16rem;
   }
 
   & .ql-container.ql-snow {
-    font-size: 13px;
-    line-height: 20px;
+    font-size: 13rem;
+    line-height: 20rem;
     color: #001c54;
   }
 
   & .ql-editor {
-    padding: 16px;
-    max-height: 120px;
+    padding: 16rem;
+    max-height: 120rem;
     overflow-y: auto;
   }
 
   & .ql-editor.ql-blank::before {
-    font-size: 13px;
-    line-height: 16px;
+    font-size: 13rem;
+    line-height: 16rem;
     color: #b3b3b3;
   }
 
@@ -39,7 +39,7 @@
 }
 
 .wrapper--closed {
-  height: 50px;
+  height: 50rem;
   & * {
     overflow: hidden;
   }
@@ -59,19 +59,19 @@
 
 .ql-toolbar.ql-snow .ql-formats {
   display: flex;
-  width: 76px;
-  gap: 4px;
+  width: 76rem;
+  gap: 4rem;
 
   & button {
-    width: 16px;
-    height: 16px;
+    width: 16rem;
+    height: 16rem;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0;
 
     & svg {
-      height: 14px;
+      height: 14rem;
       width: auto;
     }
   }
