--- a/src/components/Header/Date/Date.module.scss
+++ b/src/components/Header/Date/Date.module.scss
@@ -1,18 +1,18 @@
 .wrapper {
-  width: 400px;
+  width: 400rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .date {
-  font-size: 16px;
-  line-height: 19px;
+  font-size: 16rem;
+  line-height: 19rem;
   color: #718da7;
 }
 
 .currentTime {
-  font-size: 16px;
-  line-height: 19px;
+  font-size: 16rem;
+  line-height: 19rem;
   color: #bbbbbb;
 }
