--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 16px 38px 16px 24px;
+    padding: 16rem 38rem 16rem 24rem;
     width: 100%;
-    height: 70px;
+    height: 70rem;
 }
