--- a/src/components/Loaders/MutationDots/MutationDots.module.scss
+++ b/src/components/Loaders/MutationDots/MutationDots.module.scss
@@ -1,5 +1,5 @@
 .loaderWrapper {
-  width: 120px;
-  height: 32px;
-  transform: translateY(-20px);
+  width: 120rem;
+  height: 32rem;
+  transform: translateY(-20rem);
 }
