--- a/src/components/SIdeBar/NavBar/NavBar.module.scss
+++ b/src/components/SIdeBar/NavBar/NavBar.module.scss
@@ -8,19 +8,19 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding: 8px 8px 8px 36px;
-  gap: 7px;
+  padding: 8rem 8rem 8rem 36rem;
+  gap: 7rem;
   width: 100%;
 
   & svg {
-    width: 14px;
-    height: 14px;
+    width: 14rem;
+    height: 14rem;
     fill: #fff;
   }
 
   & span {
-    font-size: 14px;
-    line-height: 17px;
+    font-size: 14rem;
+    line-height: 17rem;
     color: #fff;
   }
 }
