--- a/src/components/SIdeBar/NotificationBar/NotificationBar.module.scss
+++ b/src/components/SIdeBar/NotificationBar/NotificationBar.module.scss
@@ -1,32 +1,32 @@
 .mainWrapper {
   display: flex;
   flex-direction: column;
-  gap: 24px;
-  padding: 0 32px;
+  gap: 24rem;
+  padding: 0 39rem 0 35rem;
 }
 
 .notificationWrapper {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 10rem;
   justify-content: center;
   align-items: center;
-  padding: 20px 0;
-  height: 104px;
+  padding: 20rem 0;
+  height: 104rem;
   background: #4171cd;
-  border-radius: 7px;
+  border-radius: 7rem;
   cursor: pointer;
 
   & svg {
     display: block;
     resize: none;
-    width: 20px;
-    height: 20px;
+    width: 20rem;
+    height: 20rem;
   }
 
   & p {
     font-weight: 500;
-    font-size: 14px;
+    font-size: 14rem;
     line-height: 122.3%;
     text-align: center;
   }
