--- a/src/pages/SchedulePage/SchedulePage.module.scss
+++ b/src/pages/SchedulePage/SchedulePage.module.scss
@@ -1,6 +1,6 @@
 .mainWrapper {
   position: relative;
-  padding: 14px 0;
+  padding: 14rem 0;
   width: 100%;
   height: 100%;
   background: #F4F6FC;
@@ -8,18 +8,18 @@
 }
 
 .subWrapper {
-  padding: 16px;
+  padding: 16rem;
   display: flex;
   flex-direction: row;
-  gap: 16px;
+  gap: 16rem;
 }
 
 .title {
-  margin-left: 16px;
-  margin-bottom: 4px;
+  margin-left: 16rem;
+  margin-bottom: 4rem;
   font-weight: 600;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 20rem;
+  line-height: 24rem;
   letter-spacing: 0.4em;
   text-transform: uppercase;
   color: #000000;
@@ -28,54 +28,54 @@
 
 .scheduleWrapper {
   display: flex;
-  gap: 16px;
+  gap: 16rem;
   flex-grow: 1;
 }
 
 .dayScheduleWrapper {
   overflow-y: auto;
-  width: 240px;
+  width: 280rem;
   flex-shrink: 0;
 }
 
 
 .dateWrapper {
-  padding-left: 16px;
+  padding-left: 16rem;
   display: flex;
   color: #545454;
   display: flex;
   align-items: flex-end;
-  margin-bottom: 8px;
+  margin-bottom: 8rem;
 }
 
 .dayInfo {
-  font-size: 21px;
-  line-height: 25px;
-  margin-right: 2px;
+  font-size: 21rem;
+  line-height: 25rem;
+  margin-right: 2rem;
 }
 
 .dateSubWrapper {
 }
 
 .monthInfo {
-  font-size: 9.14286px;
-  line-height: 10px;
+  font-size: 9.14286rem;
+  line-height: 10rem;
 }
 
 .dayOfWeekInfo {
-  font-size: 10.4348px;
-  line-height: 11px;
+  font-size: 10.4348rem;
+  line-height: 11rem;
 }
 
 .toggleButton {
   position: absolute;
-  top: 18px;
-  right: 16px;
-  width: 40px;
-  height: 40px;
+  top: 18rem;
+  right: 16rem;
+  width: 40rem;
+  height: 40rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 0.851064px solid rgba(0, 0, 0, 0.5);
-  border-radius: 3.40426px;
+  border: 0.851064rem solid rgba(0, 0, 0, 0.5);
+  border-radius: 3.40426rem;
 }
