--- a/src/components/Chat/MessageFromChat/MessageFromChat.module.scss
+++ b/src/components/Chat/MessageFromChat/MessageFromChat.module.scss
@@ -1,7 +1,65 @@
 .messageWrapper {
+  position: relative;
   width: 100%;
   display: flex;
   gap: 10rem;
+}
+
+.selfMessage {
+  flex-direction: row-reverse;
+}
+
+.messageWithAnswers {
+  &::before {
+    content: "";
+    position: absolute;
+    top: 20rem;
+    left: 20rem;
+    width: 1rem;
+    height: calc(100% - 20rem);
+    background-color: #d9d9d9;
+    z-index: 1;
+  }
+}
+
+.messageWithAnswersSelf {
+  &::before {
+    content: "";
+    position: absolute;
+    top: 20rem;
+    right: 20rem;
+    width: 1rem;
+    height: calc(100% - 20rem);
+    background-color: #d9d9d9;
+    z-index: 1;
+  }
+}
+
+.feedbackSelf {
+  position: relative;
+  padding-right: 48rem;
+  margin-top: -24rem;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 20rem;
+    width: 1rem;
+    height: 100%;
+    background-color: #d9d9d9;
+    z-index: 1;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 20rem;
+    right: 20rem;
+    width: 28rem;
+    height: 1rem;
+    background-color: #d9d9d9;
+  }
 }
 
 .feedback {
@@ -12,13 +70,28 @@
   &::before {
     content: "";
     position: absolute;
-    bottom: calc(100% - 20rem);
-    right: calc(100% - 48rem);
-    width: 28rem;
+    top: 0;
+    left: 20rem;
+    width: 1rem;
     height: 100%;
-    border-left: 1rem solid #d9d9d9;
-    border-bottom: 1rem solid #d9d9d9;
+    background-color: #d9d9d9;
     z-index: 1;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 20rem;
+    left: 20rem;
+    width: 28rem;
+    height: 1rem;
+    background-color: #d9d9d9;
+  }
+}
+
+.lastAnswer {
+  &::before {
+    height: 20rem;
   }
 }
 
@@ -59,7 +132,8 @@
 .contentSubWrapper {
   // flex-grow: 1;
   padding-bottom: 12rem;
-  min-width: 160rem;
+  min-width: 250rem;
+  transition: all 250ms ease-out;
 }
 
 .userName {
@@ -73,12 +147,32 @@
   position: relative;
   padding: 10rem 27rem 10rem 16rem;
   box-shadow: 0rem 0rem 10rem rgba(0, 0, 0, 0.2);
+  transition: all 250ms ease-out;
+
+  &::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: rgba(129, 172, 255, 0.5);
+    opacity: 0;
+    transition: opacity 250ms ease-out;
+  }
+}
+
+.contentWrapperUnread {
+  &::before {
+    opacity: 1
+  }
 }
 
 .content {
   font-size: 13rem;
   line-height: 20rem;
   color: #0c2e4c;
+  transition: color 250ms ease-out;
 
   & ul, li {
     list-style: inside;
@@ -102,6 +196,11 @@
   background: #fff;
   box-shadow: 0rem 0rem 4rem rgba(0, 0, 0, 0.12);
   border-radius: 2rem;
+}
+
+.feedbackButtonSelf {
+  left: 16rem;
+  right: auto;
 }
 
 .feedbackButtonTitle {
