--- a/src/components/NavLinksPanel/NavLinksPanel.module.scss
+++ b/src/components/NavLinksPanel/NavLinksPanel.module.scss
@@ -1,29 +1,31 @@
 .navBarWrapper {
-    display: flex;
-    gap: 2rem;
-    padding: 0 2rem;
+  display: flex;
+  gap: 2rem;
+  padding: 0 2rem;
 }
 
 .navLink {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-basis: calc(100% / 3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: calc(100% / 3);
 
-    font-size: 14rem;
-    line-height: 16.94rem;
-    font-weight: 500;
-    text-transform: uppercase;
-    color: rgba(0, 0, 0, 0.5);
+  font-size: 14rem;
+  line-height: 16.94rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.5);
 
-    height: 60rem;
+  height: 60rem;
 
-    border-radius: 2rem;
-    box-shadow: 0 0 14rem 0 rgba(0, 0, 0, 0.12);
-    transition: all 250ms ease-out;
+  border-radius: 2rem;
+  box-shadow: 0 0 4rem 0 rgba(0, 0, 0, 0.12);
+  transition: all 250ms ease-out;
+
+  background: #fff;
 }
 
 .navLink--active {
-    background-color: #4171CD;
-    color: #fff;
+  background-color: #4171cd;
+  color: #fff;
 }
