--- a/src/components/SIdeBar/SideBar.module.scss
+++ b/src/components/SIdeBar/SideBar.module.scss
@@ -6,10 +6,10 @@
   padding-top: 16rem;
   align-items: center;
   background: #3a5cbd;
-  color: #fff;
   width: 182rem;
   overflow-y: auto;
   flex-shrink: 0;
+  color: #fff;
 }
 
 .logo {
@@ -17,4 +17,6 @@
   font-size: 32rem;
   line-height: 39rem;
   text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
 }
