--- a/src/pages/CoursesPage/CourseDetailPage/CourseItemPage/CourseItemPage.module.scss
+++ b/src/pages/CoursesPage/CourseDetailPage/CourseItemPage/CourseItemPage.module.scss
@@ -3,6 +3,10 @@
   height: 100%;
   overflow-y: scroll;
 
+  & * {
+    transition: all 300ms ease-out;
+  }
+
   & .hero {
     height: 328rem;
     margin-bottom: 64rem;
@@ -196,11 +200,11 @@
   & textarea {
     width: 100%;
     height: 100%;
-    padding: 4rem 16rem;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    // padding: 4rem 16rem;
+    // position: absolute;
+    // top: 0;
+    // left: 50%;
+    // transform: translateX(-50%);
     border-radius: 4rem;
     background: rgba(0, 0, 0, 0.1);
     outline: none;
@@ -211,9 +215,6 @@
     font-style: normal;
 
     resize: none;
-
-    //   opacity: 0;
-    //   pointer-events: none;
   }
 
   & .container {
@@ -225,11 +226,12 @@
 
     position: relative;
     margin-bottom: 16rem;
-    padding: 4rem 16rem;
+
     text-align: center;
     min-height: calc(8rem + var(--line-height));
 
     & h2 {
+      padding: 4rem 16rem;
       color: rgba(0, 0, 0, 0.5);
       text-align: center;
       font-family: Inter, sans-serif;
@@ -240,6 +242,7 @@
     }
 
     & input {
+      padding: 4rem 16rem;
       font-size: 32rem;
       font-weight: 500;
       line-height: normal;
@@ -252,10 +255,11 @@
 
     position: relative;
     margin-bottom: 16rem;
-    padding: 4rem 16rem;
+
     min-height: calc(8rem + var(--line-height));
 
     & p {
+      padding: 4rem 16rem;
       color: #5e5e5e;
       text-align: center;
       font-family: Inter, sans-serif;
@@ -263,9 +267,11 @@
       font-style: normal;
       font-weight: 400;
       line-height: var(--line-height);
+      word-wrap: break-word;
     }
 
     & textarea {
+      padding: 4rem 16rem;
       font-size: 14rem;
       font-weight: 400;
       line-height: 17rem;
@@ -286,6 +292,9 @@
       position: relative;
       padding: 24rem 24rem 28rem 24rem;
       flex-basis: 310rem;
+    }
+
+    & li.itemEdit {
       background: #dcdde3;
     }
   }
@@ -364,12 +373,12 @@
   & .toLearnTextWrapper,
   & .stepsTextWrapper {
     --line-height: 17rem;
-    position: relative;
-    padding: 4rem 8rem;
+    // position: relative;
     width: 100%;
     min-height: calc(8rem + var(--line-height));
 
     & p {
+      padding: 4rem 8rem;
       color: #5e5e5e;
       text-align: center;
       font-family: Inter, sans-serif;
