--- a/src/components/SchedulePanel/LessonsList/LessonsList.module.scss
+++ b/src/components/SchedulePanel/LessonsList/LessonsList.module.scss
@@ -8,6 +8,7 @@
 .lessonsItem {
   position: relative;
   width: 100%;
+  height: 116rem;
   display: flex;
   flex-direction: column;
   padding: 16rem 32rem 16rem 16rem;
@@ -42,4 +43,25 @@
   justify-content: flex-end;
   background: none;
   border: none;
+}
+
+.lessonsAddItem {
+  width: 100%;
+  height: 116rem;
+  box-shadow: 0px 0px 4rem 0px rgba(0, 0, 0, 0.12);
+  border-radius: 2rem;
+  overflow: hidden;
+
+  & button {
+    width: 100%;
+    background: rgba(202, 202, 202, 0.4);
+    color: rgba($color: #000, $alpha: 0.5);
+    height: 100%;
+    font-size: 32rem;
+    line-height: normal;
+  }
+
+  &:hover {
+    border: 1rem solid rgba(0, 0, 0, 0.5);
+  }
 }
