--- a/src/pages/CoursesPage/CourseDetailPage/CourseItemPage/CourseItemPage.module.scss
+++ b/src/pages/CoursesPage/CourseDetailPage/CourseItemPage/CourseItemPage.module.scss
@@ -4,7 +4,7 @@
   overflow-y: scroll;
 
   & * {
-    transition: all 300ms ease-out;
+    // transition: all 300ms ease-out;
   }
 
   & .hero {
@@ -315,15 +315,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 
     position: relative;
 
     & img {
-      max-width: 100%;
-      max-height: 100%;
-      width: auto;
-      height: auto;
+      width: 80%;
+      height: 80%;
       object-fit: contain;
+    }
+
+    &:hover .uploadIconBtn {
+      opacity: 1;
+      pointer-events: visible;
     }
   }
 
@@ -336,8 +340,8 @@
     justify-content: center;
     align-items: center;
 
-    // opacity: 0;
-    // pointer-events: none;
+    opacity: 0;
+    pointer-events: none;
   }
 
   & .toLearnCardTitleWrapper,
@@ -493,6 +497,17 @@
     justify-content: center;
     align-items: center;
     position: relative;
+
+    &:hover .stepsUploadIconBtn {
+      opacity: 1;
+      pointer-events: visible;
+    }
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
   }
 
   & .stepsUploadIconBtn {
@@ -504,8 +519,10 @@
     justify-content: center;
     align-items: center;
 
-    // opacity: 0;
-    // pointer-events: none;
+    opacity: 0;
+    pointer-events: none;
+
+    transition: opacity 300ms ease-out;
   }
 
   & .StepsCardTitleWrapper {
@@ -555,5 +572,12 @@
   .arrowUp {
     display: block;
     margin: 0 auto;
+  }
+
+  // teachers //
+
+  li.teacherItem {
+    background: transparent;
+    box-shadow: none;
   }
 }
