--- a/src/pages/CoursesPage/CourseDetailPage/CourseItemPage/CourseItemPage.module.scss
+++ b/src/pages/CoursesPage/CourseDetailPage/CourseItemPage/CourseItemPage.module.scss
@@ -13,6 +13,16 @@
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
+    border-radius: 4rem;
+    overflow: hidden;
+  }
+
+  .backgroungImage {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
   }
 
   & .heroContainer {
@@ -22,6 +32,8 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 24rem;
+    position: relative;
+    z-index: 2;
   }
 
   & .logoWrapper {
@@ -47,7 +59,11 @@
     inset: 0;
     background: rgba(0, 0, 0, 0.7);
     opacity: 0;
-    pointer-events: none;
+    transition: opacity 300ms ease-out;
+
+    &:hover {
+      opacity: 1;
+    }
 
     & svg {
       width: 24rem;
@@ -120,14 +136,10 @@
     & input {
       width: 88rem;
       text-align: center;
-      position: absolute;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.7);
+      background: transparent;
       -moz-appearance: textfield;
       outline: none;
       border: none;
-      opacity: 0;
-      pointer-events: none;
 
       color: #fff;
       text-align: center;
@@ -138,6 +150,11 @@
       font-weight: 700;
       line-height: normal;
       text-transform: uppercase;
+
+      &:hover,
+      &:focus {
+        background: rgba(0, 0, 0, 0.7);
+      }
 
       &::-webkit-inner-spin-button,
       .custom-number-input::-webkit-outer-spin-button {
@@ -153,8 +170,6 @@
   .itemLabel {
     width: 88rem;
     border-radius: 4rem;
-    // background: rgba(0, 0, 0, 0.7);
-
     color: #fff;
     text-align: center;
     text-shadow: 0 0 15.342002868652344rem rgba(0, 0, 0, 0.22);
@@ -178,7 +193,11 @@
     justify-content: space-evenly;
     align-items: center;
     opacity: 0;
-    pointer-events: none;
+    transition: opacity 300ms ease-out;
+
+    &:hover {
+      opacity: 1;
+    }
 
     & span {
       color: #fff;
