--- a/src/pages/SchedulePage/SchedulePage.module.scss
+++ b/src/pages/SchedulePage/SchedulePage.module.scss
@@ -1,17 +1,17 @@
 .mainWrapper {
   position: relative;
-  padding: 16rem 0 ;
   width: 100%;
   height: 100%;
-  background: #F4F6FC;
-  overflow-x: auto;
+  background: #f4f6fc;
 }
 
 .subWrapper {
+  height: 100%;
   padding: 16rem;
   display: flex;
   flex-direction: row;
   gap: 16rem;
+  overflow-x: auto;
 }
 
 .title {
@@ -37,7 +37,6 @@
   width: 280rem;
   flex-shrink: 0;
 }
-
 
 .dateWrapper {
   padding-left: 16rem;
