--- a/src/pages/CoursesPage/CourseDetailPage/CourseTasksPage/CourseTasksPage.module.scss
+++ b/src/pages/CoursesPage/CourseDetailPage/CourseTasksPage/CourseTasksPage.module.scss
@@ -2,6 +2,9 @@
   padding: 0 2rem;
   height: 100%;
 }
+.titlesWrapper {
+  height: 60rem;
+}
 
 .primaryTitleWrapper {
   padding: 20rem 24rem 20rem 28rem;
